2007-03-13  Antti Koivisto  <antti@apple.com>

        Reviewed by Alexey.
        
        Test for DOS using composed character.

        * fast/text/large-text-composed-char-dos-expected.txt: Added.
        * fast/text/large-text-composed-char-dos.html: Added.

2007-03-13  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by Tim H.

        - fix test results for http://bugs.webkit.org/show_bug.cgi?id=13054
          Layout tests results require updates after JavaScript wrapper class name fixes

        * fast/dom/gc-6-expected.txt: Renamed DOMHTMLElement to HTMLElement.
        * fast/dom/gc-7-expected.txt: Ditto.
        * fast/dom/prototype-chain-expected.txt: Renamed DOMHTMLElementPrototype to HTMLElementPrototype.
        * fast/dom/undetectable-document-all-expected.txt: Renamed Collection to HTMLCollection.
        * fast/dom/wrapper-classes-expected.txt: Updated for change to output for string comparison failure
        in fast/js/resources/js-test-pre.js.
        * fast/events/mouseclick-target-and-positioning-expected.txt: Renamed DOMHTMLElement to HTMLElement.
        * fast/tokenizer/external-script-document-write-expected.checksum: Ditto.
        * fast/tokenizer/external-script-document-write-expected.png: Ditto.
        * fast/tokenizer/external-script-document-write-expected.txt: Ditto.

2007-03-12  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

        <rdar://problem/4743256> ctrl-y key binding (yank) should do nothing when kill ring is empty

        * editing/pasteboard/emacs-cntl-y-001-expected.checksum:
        * editing/pasteboard/emacs-cntl-y-001-expected.png:
        * editing/pasteboard/emacs-cntl-y-001-expected.txt:
        * editing/pasteboard/emacs-cntl-y-001.html:

2007-03-12  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Anders.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13015
          REGRESSION (r17233-r17241): Repro crash when leaving a page whose unload handler submits a form
