@@ -48,7 +48,7 @@ so long as any node in the document is reachable.
 </p>
 <p>
 The output should be the following pieces of text on lines by
-themselves: "B", "[object DOMHTMLElement]", "null", "[object HTMLDocument]".
+themselves: "B", "[object HTMLElement]", "null", "[object HTMLDocument]".
 </p>
 </div>
 
