@@ -1,6 +1,6 @@
-This test verifies that bjects are protected against garbage collection as long as the document is alive (for contrast with test 6).
+This test verifies that objects are protected against garbage collection as long as the document is alive (for contrast with test 6).
 
-The output should be the following pieces of text on lines by themselves: "B", "[object DOMHTMLElement]", "[object DOMHTMLElement]", "[object HTMLDocument]".
+The output should be the following pieces of text on lines by themselves: "B", "[object HTMLElement]", "[object HTMLElement]", "[object HTMLDocument]".
 
 B
 [object HTMLElement]
