@@ -43,13 +43,13 @@ if (window.layoutTestController) {
 <body onload="doit()">
 <div style="border: 1px solid red">
 <p>
-This test verifies that bjects are protected against garbage
+This test verifies that objects are protected against garbage
 collection as long as the document is alive (for contrast with test
 6).
 </p>
 <p>
 The output should be the following pieces of text on lines by
-themselves: "B", "[object DOMHTMLElement]", "[object DOMHTMLElement]", "[object HTMLDocument]".
+themselves: "B", "[object HTMLElement]", "[object HTMLElement]", "[object HTMLDocument]".
 </p>
 </div>
 
